--- a/wordgraph/static/index.html
+++ b/wordgraph/static/index.html
@@ -56,7 +56,7 @@
 		<hr>
 
 		<div style="display: inline-block;">
-			<div>キーワード関連性グラフ(クリック：記事検索 ダブルクリック：ジャンプ)</div>
+			<div>キーワード関連性グラフ(クリック：対象キーワードで再検索)</div>
 			<svg id="ga1" width="700" height="600" style="border: 1px solid gray;"></svg>
 		</div>
 		<div style="display: inline-block;">
